# autodesc

./: Cargo.toml  LICENSE  Procfile  README.md  build.sh
data/: de_nationality_adjectives.json  index.html  stock.json
src/: desc_options.rs  english.rs  generator.rs  lib.rs  long_desc.rs  main.rs  media.rs  result.rs  short_desc.rs  wikidata.rs  wikidata_item.rs
src/long_desc/: lang_de.rs  lang_en.rs  lang_fr.rs  lang_nl.rs
src/short_desc/: claims.rs  describers.rs  labeler.rs  word_helpers.rs
tests/: api_integration.rs  long_desc_tests.rs
