[package]
name = "autodesc"
version = "0.2.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2021"
description = "Automatic description generator for Wikidata items"

[[bin]]
name = "autodesc-server"
path = "src/bin/main.rs"

[lib]
name = "autodesc"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["query"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Utilities
once_cell = "1"
regex = "1"
urlencoding = "2"
html-escape = "0.2"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
